# neuronal_network_cpp

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  activation_functions.cpp  activation_functions.hpp  constants.hpp  data_structures.c  data_structures.h  download_data.sh  install_dependencies.sh  main.c  main.cpp  matrix.h  matrix.hpp  menu.c  menu.cpp  menu.h  menu.hpp  network.c  network.cpp  network.h  network.hpp  neuron.hpp  neurone.h  transform.c  transform.cpp  transform.h  transform.hpp
doc/: Untitled Diagram.drawio
include/: activation_functions.h  data_loader.h  io.h  layer.h  layers.h  model.h  network.h
include/algorithms/: backpropagation.h  feedforward.h
include/math/: activation.h  functions.h  gradient.h  matrix.h  vector.h
include/utils/: garbage.h
includes/: activation_functions.h  constants.h  constants.hpp  layer.h  maths.h  menu.h  menu.hpp  network.h  network.hpp
includes/algorithms/: back_propagation.h  backpropagation.h  feedforward.h
includes/math/: gradient.h  matrix.h  vector.h
models/: MODEL_FORMAT.md
src/: activation.rs  activation_functions.cpp  activation_functions.hpp  data_loader.cpp  io.cpp  io.rs  layer.cpp  layers.cpp  main.cpp  main.rs  menu.cpp  menu.rs  model.cpp  network.cpp  network.rs  neuron.cpp  neuron.hpp  trainer.rs
src/algorithms/: backpropagation.cpp  feedforward.cpp
src/math/: activation.cpp  functions.cpp  gradient.cpp  matrix.cpp  vector.cpp
src/utils/: garbage.cpp
test/: feedforward.cpp  tests.cpp
tests/celcius_to_farenheit/: test_gen.py
