[package]
name = "neuronal-network-rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://www.github.com/uwo-o/neuronal_network_rust"
authors = ["Hugo Campos Castro <hugo.campos@usm.cl>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
ndarray = "0.15.6"
rand = "0.8.5"
